z-index fixing & EmailJS environment variable adding

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -222,7 +222,6 @@ section {
     align-items: center;
     padding-top: 80px;
     position: relative;
-    z-index: -1;
     overflow: hidden;
 }
 
@@ -573,8 +572,9 @@ section {
     justify-content: center;
     width: 40px;
     height: 40px;
+    text-decoration: none;
     background-color: var(--light-color);
-    color: var(--primary-color);
+    color: var(--secondary-color);
     border-radius: 50%;
     transition: var(--transition);
 }
@@ -790,10 +790,11 @@ section {
         text-align: center;
         padding-top: 120px;
         height: auto;
+        padding-bottom: 0;
     }
     
     .hero-content {
-        margin-bottom: 50px;
+        margin-bottom: 60px;
     }
     
     .hero-cta {
